Добавлены мета-теги для улучшения отображения в социальных сетях и поисковых системах в файле index.html. Удален плагин для динамического обновления мета-тегов из конфигурации Vite, что упрощает структуру кода. Обновлен HTML-шаблон с новыми мета-тегами для Open Graph и Twitter Card.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
     />
     <link href="/logo.svg" rel="icon" type="image/svg+xml" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
+    <!-- Open Graph мета-теги для превью в социальных сетях -->
+    <meta property="og:title" content="Руководство по модификациям Skyrim" />
+    <meta
+      property="og:description"
+      content="Пошаговое руководство по установке модификаций для The Elder Scrolls V: Skyrim Anniversary Edition"
+    />
+    <meta property="og:image" content="/preview-large.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mods-guide.vercel.app" />
+    <meta property="og:site_name" content="Mods Guide" />
+
+    <!-- Twitter Card мета-теги -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Руководство по модификациям Skyrim" />
+    <meta
+      name="twitter:description"
+      content="Пошаговое руководство по установке модификаций для The Elder Scrolls V: Skyrim Anniversary Edition"
+    />
+    <meta name="twitter:image" content="/preview-large.png" />
+
+    <!-- Дополнительные мета-теги -->
+    <meta
+      name="description"
+      content="Пошаговое руководство по установке модификаций для The Elder Scrolls V: Skyrim Anniversary Edition"
+    />
+    <meta
+      name="keywords"
+      content="Skyrim, моды, модификации, руководство, установка, Anniversary Edition"
+    />
+    <meta name="author" content="Mods Guide Team" />
+
     <title>Mods Guide</title>
   </head>
   <body>
