Обновлены мета-теги в файле index.html: изменен автор на "Andiewahl" для мета-тегов Open Graph и стандартного мета-тега автора.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://mods-guide.vercel.app" />
     <meta property="og:site_name" content="Mods Guide" />
+    <meta property="og:author" content="Andiewahl" />
 
     <!-- Twitter Card мета-теги -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -42,7 +43,7 @@
       name="keywords"
       content="Skyrim, моды, модификации, руководство, установка, Anniversary Edition"
     />
-    <meta name="author" content="Mods Guide Team" />
+    <meta name="author" content="Andiewahl" />
 
     <title>Mods Guide</title>
   </head>
